--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "@types/styled-components": "^5.1.34",
     "@types/styled-components-react-native": "^5.2.5",
     "axios": "^1.8.4",
-    "expo": "~52.0.43",
+    "buffer": "^6.0.3",
+    "expo": "~52.0.46",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-splash-screen": "~0.29.22",
+    "expo-router": "~4.0.21",
+    "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
